--- a/Python_Data_Science/Pandas/Python_para_Data_Science_Pandas.ipynb
+++ b/Python_Data_Science/Pandas/Python_para_Data_Science_Pandas.ipynb
@@ -1338,13 +1338,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "YIFVkWT6D0_1"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Jetta Variant', 'Passat', 'Crossfox']"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "carros = ['Jetta Variant', 'Passat', 'Crossfox']\n",
     "carros"
@@ -1352,13 +1363,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "2LHiBn3-D0_2"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[88078.64, 106161.94, 72832.16]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "valores = [88078.64, 106161.94, 72832.16]\n",
     "valores"
@@ -1366,47 +1388,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "YxLAx_sqD0_4"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "carros.index('Passat')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "WITNWExID0_7"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "106161.94"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "valores[carros.index('Passat')]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "bHNqoDbTD0_8"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Jetta Variant': 124549.07, 'Passat': 124549.07, 'Crossfox': 124549.07}"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos = {}\n",
+    "for key, value in zip(carros, valores):\n",
+    "    datos[key] = valor\n",
+    "\n",
+    "datos"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "4FyQgmcAD0_9"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(datos)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1420,25 +1498,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "iB4Q_gbND0__"
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "mIgZqdKKD1AA"
-   },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Jetta Variant': 88078.64, 'Passat': 106161.94, 'Crossfox': 72832.16}"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos2 = dict(zip(carros, valores))\n",
+    "datos2"
+   ]
   },
   {
    "cell_type": "markdown",
