TRABAJANDO CON DICCIONARIOS

--- a/Python_Data_Science/Pandas/Python_para_Data_Science_Pandas.ipynb
+++ b/Python_Data_Science/Pandas/Python_para_Data_Science_Pandas.ipynb
@@ -1545,14 +1545,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "hFFDz6wKD1AD"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "106161.94"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos2['Passat']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1568,36 +1581,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "Iy88SxBtD1AE"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'Passat' in datos2"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "Oma56NkAD1AF"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'Fuscan' in datos2"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "yS2U-_8gD1AG"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'Fuscan' not in datos2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1613,14 +1665,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "k08YkCc1D1AJ"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(datos2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1636,14 +1701,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "5jj3i52bD1AK"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Jetta Variant': 88078.64,\n",
+       " 'Passat': 106161.94,\n",
+       " 'Crossfox': 72832.16,\n",
+       " 'DS5': 124000.07}"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos2['DS5'] = 124000.07\n",
+    "datos2"
+   ]
   },
   {
    "cell_type": "code",
@@ -1670,25 +1752,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "PPfh6sfID1AM"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "del datos2['Passat']"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "BtjGpXtGD1AN"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Jetta Variant': 88078.64, 'Crossfox': 72832.16, 'DS5': 124000.07}"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1714,25 +1811,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "DUySYxKQD1AQ"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Jetta Variant': 88078.64, 'Crossfox': 72832.16, 'DS5': 124000.07}"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos2"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "DLsqp71cD1AR"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Jetta Variant': 88078.64,\n",
+       " 'Crossfox': 72832.16,\n",
+       " 'DS5': 124000.07,\n",
+       " 'Passat': 106161.94}"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos2.update({'Passat': 106161.94})\n",
+    "datos2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Jetta Variant': 88078.64,\n",
+       " 'Crossfox': 72832.16,\n",
+       " 'DS5': 124000.07,\n",
+       " 'Passat': 106161.95,\n",
+       " 'Fuscam': 150000}"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# modificar \n",
+    "datos2.update({'Passat': 106161.95, 'Fuscam': 150000})\n",
+    "datos2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1748,47 +1901,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "X9F7OB3eD1AS"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "datos2Copy = datos2.copy()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "v0rL0bveD1AS"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Jetta Variant': 88078.64,\n",
+       " 'Crossfox': 72832.16,\n",
+       " 'DS5': 124000.07,\n",
+       " 'Passat': 106161.95,\n",
+       " 'Fuscam': 150000}"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos2Copy"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "M-abRGGrD1AT"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Jetta Variant': 88078.64,\n",
+       " 'Crossfox': 72832.16,\n",
+       " 'DS5': 124000.07,\n",
+       " 'Passat': 106161.95}"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "del datos2Copy['Fuscam']\n",
+    "datos2Copy"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "ETBD0TkND1AU"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Jetta Variant': 88078.64,\n",
+       " 'Crossfox': 72832.16,\n",
+       " 'DS5': 124000.07,\n",
+       " 'Passat': 106161.95,\n",
+       " 'Fuscam': 150000}"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1804,102 +2010,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "_4QEPwScD1AW"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Jetta Variant': 88078.64,\n",
+       " 'Crossfox': 72832.16,\n",
+       " 'DS5': 124000.07,\n",
+       " 'Passat': 106161.95}"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos2Copy"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "Hjh0MuymD1AX"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "106161.95"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#eliminar\n",
+    "datos2Copy.pop('Passat')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "f51rKjkuD1AX"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'Passat'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Juanfe\\python\\1756-aula1\\Python_Data_Science\\Pandas\\Python_para_Data_Science_Pandas.ipynb Celda 92\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Juanfe/python/1756-aula1/Python_Data_Science/Pandas/Python_para_Data_Science_Pandas.ipynb#Y161sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m datos2Copy\u001b[39m.\u001b[39;49mpop(\u001b[39m'\u001b[39;49m\u001b[39mPassat\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'Passat'"
+     ]
+    }
+   ],
+   "source": [
+    "datos2Copy.pop('Passat')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "Ah4sZ7axD1AZ"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'LLave no fue encontrada'"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#error con mensaje personalizado\n",
+    "datos2Copy.pop('Passat', 'LLave no fue encontrada')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "SJATRY8RD1Aa"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "124000.07"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos2Copy.pop('DS5', 'LLave no fue encontrada')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "V36wHdzmD1Ab"
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "LJ0lQIrdD1Ac"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "yKGu-fYkD1Ad"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "x-h8nVyhD1Af"
-   },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Jetta Variant': 88078.64, 'Crossfox': 72832.16}"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos2Copy"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1915,25 +2172,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "AvkP_8mND1Ag"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# metodo para lipiar el diccionario\n",
+    "datos2Copy.clear()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "S69pMYboD1Ah"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos2Copy"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1959,25 +2232,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "qFADEYmBD1Aj"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Jetta Variant': 88078.64,\n",
+       " 'Crossfox': 72832.16,\n",
+       " 'DS5': 124000.07,\n",
+       " 'Passat': 106161.95,\n",
+       " 'Fuscam': 150000}"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos = {'Jetta Variant': 88078.64,\n",
+    " 'Crossfox': 72832.16,\n",
+    " 'DS5': 124000.07,\n",
+    " 'Passat': 106161.95,\n",
+    " 'Fuscam': 150000}\n",
+    "\n",
+    "datos"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "niwh9AgDD1Aj"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['Jetta Variant', 'Crossfox', 'DS5', 'Passat', 'Fuscam'])"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jetta Variant\n",
+      "Crossfox\n",
+      "DS5\n",
+      "Passat\n",
+      "Fuscam\n"
+     ]
+    }
+   ],
+   "source": [
+    "for dato in datos.keys():\n",
+    "    print(dato)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1993,14 +2324,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "nfpLxrQVD1Al"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Jetta Variant': 88078.64,\n",
+       " 'Crossfox': 72832.16,\n",
+       " 'DS5': 124000.07,\n",
+       " 'Passat': 106161.95,\n",
+       " 'Fuscam': 150000}"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos.values()\n",
+    "datos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "88078.64\n",
+      "72832.16\n",
+      "124000.07\n",
+      "106161.95\n",
+      "150000\n"
+     ]
+    }
+   ],
+   "source": [
+    "for dato in datos.values():\n",
+    "    print(dato)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2016,47 +2387,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "Q2I9_6YvD1Am"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_items([('Jetta Variant', 88078.64), ('Crossfox', 72832.16), ('DS5', 124000.07), ('Passat', 106161.95), ('Fuscam', 150000)])"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos.items()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "0j41ZqgQD1Am"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Jetta Variant', 88078.64)\n",
+      "('Crossfox', 72832.16)\n",
+      "('DS5', 124000.07)\n",
+      "('Passat', 106161.95)\n",
+      "('Fuscam', 150000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in datos.items():\n",
+    "    print(i)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "OVY9rIwFD1An"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jetta Variant -> 88078.64\n",
+      "Crossfox -> 72832.16\n",
+      "DS5 -> 124000.07\n",
+      "Passat -> 106161.95\n",
+      "Fuscam -> 150000\n"
+     ]
+    }
+   ],
+   "source": [
+    "#desempacar las tuplas\n",
+    "for k, v in datos.items():\n",
+    "    print(k, '->', v)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "ma2Ol8vcD1Ap"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DS5\n",
+      "Passat\n",
+      "Fuscam\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k, v in datos.items():\n",
+    "    if v > 100000:\n",
+    "        print(k)"
+   ]
   },
   {
    "cell_type": "markdown",
