--- a/Python_Data_Science/Pandas/Python_para_Data_Science_Pandas.ipynb
+++ b/Python_Data_Science/Pandas/Python_para_Data_Science_Pandas.ipynb
@@ -2517,13 +2517,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "DP7cmY7xD1Aq"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Jetta Variant': 88078.64, 'Passat': 106161.94, 'Crossfox': 72832.16}"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "datos = {'Jetta Variant': 88078.64, 'Passat': 106161.94, 'Crossfox': 72832.16}\n",
     "datos"
@@ -2531,70 +2542,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "5zAcGSCbD1Ar"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "267072.74"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sumatoria = 0\n",
+    "for i in datos.values():\n",
+    "    sumatoria+= i\n",
+    "\n",
+    "sumatoria"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "zG9_jU_1D1At"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[88078.64, 106161.94, 72832.16]"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(datos.values())"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "jn0O3uXZD1Au"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "267072.74"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(datos.values())"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "lnUjKVnoD1Aw"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function print in module builtins:\n",
+      "\n",
+      "print(*args, sep=' ', end='\\n', file=None, flush=False)\n",
+      "    Prints the values to a stream, or to sys.stdout by default.\n",
+      "    \n",
+      "    sep\n",
+      "      string inserted between values, default a space.\n",
+      "    end\n",
+      "      string appended after the last value, default a newline.\n",
+      "    file\n",
+      "      a file-like object (stream); defaults to the current sys.stdout.\n",
+      "    flush\n",
+      "      whether to forcibly flush the stream.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(print)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "WdEuYXe2D1Ay",
     "scrolled": false
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "hIA29O3tD1Az"
-   },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1;31mSignature:\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msep\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m' '\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mend\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'\\n'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfile\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mflush\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mDocstring:\u001b[0m\n",
+      "Prints the values to a stream, or to sys.stdout by default.\n",
+      "\n",
+      "sep\n",
+      "  string inserted between values, default a space.\n",
+      "end\n",
+      "  string appended after the last value, default a newline.\n",
+      "file\n",
+      "  a file-like object (stream); defaults to the current sys.stdout.\n",
+      "flush\n",
+      "  whether to forcibly flush the stream.\n",
+      "\u001b[1;31mType:\u001b[0m      builtin_function_or_method"
+     ]
+    }
+   ],
+   "source": [
+    "print?"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2625,25 +2713,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "uCkplEpQD1A0"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def media ():\n",
+    "    valor = (1+2+3) /3\n",
+    "    print(valor)\n",
+    "    \n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "fOCEGq5VD1A1"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "media()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2664,80 +2767,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "A3YnBUduD1A3"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def media (num1, num2, num3):\n",
+    "    valor = (num1 + num2 + num3) /3\n",
+    "    print(valor)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "rGUZbRERD1A3"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "media(1,2,3)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "B9WDlRE7D1A5"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "media(23,45,67)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "1HAy8OK_D1A6"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def media (lista):\n",
+    "    valor = sum(lista)/ len(lista)\n",
+    "    print(valor)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "_CDa4oOfD1A6"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "resultado = media([1,2,3,4,5,6,7,8,9,10])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "xH-mxqYAD1A8"
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "WXXC_UidD1A8"
-   },
-   "outputs": [],
-   "source": []
+   "source": [
+    "resultado"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2769,47 +2901,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "-UG42RQJD1A9"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def media (lista):\n",
+    "    valor = sum(lista)/ len(lista)\n",
+    "    return valor"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "VJwdvoT5D1A-"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.5"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "media([1,2,3,4,5,6,7,8])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "AgAeJkpND1A-"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "resultado = media([1,2,3,4,5,6,7,8])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "_r616TevD1A_"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.5"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resultado"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2831,58 +2995,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "v0PUMegVD1BA"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def media (lista):\n",
+    "    valor = sum(lista)/ len(lista)\n",
+    "    return (valor, len(lista))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "Ys-etom8D1BA"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4.5, 8)"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "media([1,2,3,4,5,6,7,8])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "LERrvkMHD1BC"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "resultado, n = media([1,2,3,4,5,6,7,8,9])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "sqoFOWSsD1BC"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.0"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resultado"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "NdB_Jyw_D1BD"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n"
+   ]
   },
   {
    "cell_type": "markdown",
